--- a/wwwroot/accounts.html
+++ b/wwwroot/accounts.html
@@ -47,8 +47,8 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div v-for="account in clientInfo.accounts.$values" class="col-12 col-md-3 mt-2">
-                        <a class="account-link" v-bind:href="'http://localhost:15922/account.html?id='+account.id">
+                    <div v-for="account in clientInfo.accounts" class="col-12 col-md-3 mt-2">
+                        <a class="account-link" v-bind:href="'http://localhost:5149/account.html?id='+account.id">
                             <div class="card border-0 account">
                                 <div class="card-body">
                                     <h5 class="card-title">{{ account.number }}</h5>
@@ -66,7 +66,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div v-for="credit in clientInfo.credits.$values" class="col-12 col-md-3 mt-2">
+                    <div v-for="credit in clientInfo.credits" class="col-12 col-md-3 mt-2">
                         <div class="card border-0 credit">
                             <div class="card-body">
                                 <h5 class="card-title">{{ credit.name }}</h5>
