--- a/wwwroot/cards.html
+++ b/wwwroot/cards.html
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿﻿
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -28,7 +29,7 @@
                 <div class="col-12 col-md-2">
                     <div class="bg-light">
                         <a href="/accounts.html"
-                            class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
+                           class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
                             <img class="menu-logo" src="img/logo vinotinto.png">
                             <span class="fs-5">Banco Vinotinto</span>
                         </a>
@@ -74,14 +75,13 @@
                     <div class="row mt-3">
                         <div class="col">
                             <h2 class="display-6">Debit Cards</h2>
-                            <a v-if="clientInfo.cards.$values != null && clientInfo.cards.$values.length < 6" href="create-cards.html" id="create" class="btn btn-sm btn-outline-success">Create</a>
+                            <a v-if="clientInfo.cards != null && clientInfo.cards.length < 6" href="create-cards.html" id="create" class="btn btn-sm btn-outline-success">Create</a>
                             <span class="small" v-if="debitCards.length <= 0">No debit cards</span>
                         </div>
                     </div>
                     <div class="row">
                         <div v-for="card in debitCards" class="plastic-card col-12 col-md-3 mt-2">
-                            <div
-                                v-bind:class="['plastic-card__front', 'plastic-card__part', card.color.toLowerCase() +'-plastic-card']">
+                            <div v-bind:class="['plastic-card__front', 'plastic-card__part', card.color.toLowerCase() +'-plastic-card']">
                                 <div class="plastic-card__square">
                                     <span class="plastic-card__label">{{ card.type}} {{ card.color }}</span>
                                 </div>
@@ -96,9 +96,8 @@
                                     <p class="plastic-card__info">{{ formatDate(card.thruDate) }}</p>
                                 </div>
                             </div>
-        
-                            <div
-                                v-bind:class="['plastic-card__back', 'plastic-card__part', card.color.toLowerCase() +'-plastic-card']">
+
+                            <div v-bind:class="['plastic-card__back', 'plastic-card__part', card.color.toLowerCase() +'-plastic-card']">
                                 <div class="plastic-card__black-line"></div>
                                 <div class="plastic-card__back-content">
                                     <div class="plastic-card__secret">
@@ -120,8 +119,7 @@
                     </div>
                     <div class="row">
                         <div v-for="card in creditCards" class="plastic-card col-12 col-md-3 mt-2">
-                            <div
-                                v-bind:class="['plastic-card__front', 'plastic-card__part', card.color.toLowerCase() +'-plastic-card']">
+                            <div v-bind:class="['plastic-card__front', 'plastic-card__part', card.color.toLowerCase() +'-plastic-card']">
                                 <div class="plastic-card__square">
                                     <span class="plastic-card__label">{{ card.type}} {{ card.color }}</span>
                                 </div>
@@ -136,9 +134,8 @@
                                     <p class="plastic-card__info">{{ formatDate(card.thruDate) }}</p>
                                 </div>
                             </div>
-        
-                            <div
-                                v-bind:class="['plastic-card__back', 'plastic-card__part', card.color.toLowerCase() +'-plastic-card']">
+
+                            <div v-bind:class="['plastic-card__back', 'plastic-card__part', card.color.toLowerCase() +'-plastic-card']">
                                 <div class="plastic-card__black-line"></div>
                                 <div class="plastic-card__back-content">
                                     <div class="plastic-card__secret">
